pihole-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-deployment
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:v5.8.1
        lifecycle:
          postStart:
            exec:
              command:
              - sh
              - -c
              - pihole -a -p $WEBPASSWORD
        ports:
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 67
          name: dhcp
          protocol: UDP
        - containerPort: 67
        volumeMounts:
        - name: pihole-etc
          mountPath: /etc/pihole
        - name: pihole-dnsmasq
          mountPath: /etc/dnsmasq.d
      volumes:
      - name: pihole-etc
        persistentVolumeClaim:
          claimName: pihole-etc-pvc
      - name: pihole-dnsmasq
        persistentVolumeClaim:
          claimName: pihole-dnsmasq-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc-web
  namespace: pihole
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
    metallb.universe.tf/address-pool: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc-dns-tcp
  namespace: pihole
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
    metallb.universe.tf/address-pool: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
  - name: dns-tcp
    port: 53
    targetPort: dns-tcp
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc-dns-udp
  namespace: pihole
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
    metallb.universe.tf/address-pool: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
  - name: dns-udp
    port: 53
    targetPort: dns-udp
    protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc-dhcp
  namespace: pihole
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
    metallb.universe.tf/address-pool: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
  - name: dhcp
    port: 67
    targetPort: dhcp
    protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
 rules:
  - host: pihole.192.168.1.42.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-svc-web
            port:
              name: http
